tests/ui/modules/path-macro.stderr
error: malformed `path` attribute input
  --> $DIR/path-macro.rs:5:1
   |
LL | #[path = foo!()]
   | ^^^^^^^^^^^^^^^^ help: must be of the form: `#[path = "file"]`
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/items/modules.html#the-path-attribute>

error: aborting due to 1 previous error

